--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
-              <img src="projects/5.jpg" class="card-img-top" alt="Project 5" />
+              <img src="projects/Logoku.jpg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
-                <p class="card-text">Studying in the IT world since 2018, experienced in doing social engineering, especially for penetration testing into a website .</p>
+                <p class="card-text">Apart from being a web developer, I am also a logo designer with the best quality</p>
               </div>
             </div>
           </div>
